feat: Implementado newRadialTree e insertRadialT

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "qry.h": "c"
+        "qry.h": "c",
+        "stdlib.h": "c",
+        "radialtree.h": "c",
+        "math.h": "c"
     }
 }
