--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,9 @@
 {
-    "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "qry.h": "c",
-        "stdlib.h": "c",
-        "radialtree.h": "c",
+        "*.c": "c",
         "math.h": "c",
-        "fila.h": "c",
-        "stdbool.h": "c"
+        "geo.h": "c",
+        "learquivo.h": "c"
     },
-    "makefile.launchConfigurations": [
-        {
-            "cwd": "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/output",
-            "binaryPath": "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/output/ted",
-            "binaryArgs": []
-        }
-    ]
+    "C_Cpp.errorSquiggles": "disabled"
 }
