test: Criado casos para teste

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,12 @@
         "*.c": "c",
         "math.h": "c",
         "geo.h": "c",
-        "learquivo.h": "c"
+        "learquivo.h": "c",
+        "arqsvg.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
-        "clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling"
+        "clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling",
+        "clang-analyzer-security.insecureAPI.strcpy"
     ]
 }
