feat: Terminado implementação de OperaSVG

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,12 @@
     "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
         "clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling",
         "clang-analyzer-security.insecureAPI.strcpy"
+    ],
+    "makefile.launchConfigurations": [
+        {
+            "cwd": "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/output",
+            "binaryPath": "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/output/ted",
+            "binaryArgs": []
+        }
     ]
 }
