test: Elaborado SVG para testes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
         "learquivo.h": "c",
         "arqsvg.h": "c",
         "utilities.h": "c",
-        "algorithm": "c"
+        "algorithm": "c",
+        "string.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
