--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,9 @@
         "arqsvg.h": "c",
         "utilities.h": "c",
         "algorithm": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "radialtree.h": "c",
+        "stdbool.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
