feat: Iniciado a Harvest

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
         "dot.h": "c",
         "geradores.h": "c",
         "stdio.h": "c",
-        "svg-dot.h": "c"
+        "svg-dot.h": "c",
+        "listadupla.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
