docs: Documentado algumas funções e separado o svg-dot

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
         "utility": "c",
         "def.h": "c",
         "path.h": "c",
-        "random": "c"
+        "random": "c",
+        "unistd.h": "c"
     },
     "C_Cpp.errorSquiggles": "disabled",
     "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
