feat: Adicionado funções relacionadas as gotículas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,11 +38,11 @@
                 "-e",
                 "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED",
                 "-f",
-                "arq.geo",
+                "goticula.geo",
                 "-o",
                 "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/logs",
                 "-q",
-                "arqcons.qry",
+                "goticula.qry",
                 "-ns",
                 "8",
                 "-fd",
