--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src/Bibliotecas"]
-	path = Bibliotecas
+[submodule "Bibliotecas"]
+	path = src/Bibliotecas
 	url = https://github.com/LiloMarino/Bibliotecas
