Atualizado para deletar os .dot dos .geo adicionais gerados

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -39,11 +39,11 @@
                 "-e",
                 "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src",
                 "-f",
-                "04-grande.geo",
+                "00-simples-morango.geo",
                 "-o",
                 "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src/logs",
                 "-q",
-                "arqcons.qry",
+                "00-simples-morango/colhe-interv-horz.qry",
                 "-ns",
                 "8",
                 "-fd",
