--- a/src/makefile
+++ b/src/makefile
@@ -42,9 +42,9 @@ clean:
 run:
 	cd $(OUTPUT) && valgrind --leak-check=full --show-leak-kinds=all ./$(PROJETO) \
 		-e "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src" \
-		-f "goticula.geo" \
+		-f "00-simples-morango.geo" \
 		-o "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src/logs" \
-		-q "goticula.qry" \
+		-q "00-simples-morango/colhe-interv-horz.qry" \
 		-ns "8" \
 		-fd "10"
 
