--- a/src/makefile
+++ b/src/makefile
@@ -42,9 +42,9 @@ clean:
 run:
 	cd $(OUTPUT) && valgrind --leak-check=full --show-leak-kinds=all ./$(PROJETO) \
 		-e "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src" \
-		-f "04-grande.geo" \
+		-f "00-simples-morango" \
 		-o "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src/logs" \
-		-q "04-grande/colhe-interv-horz1.qry" \
+		-q "00-simples-morango/colhe-interv-horz.qry" \
 		-ns "100" \
 		-fd "10"
 
