--- a/src/makefile
+++ b/src/makefile
@@ -42,7 +42,7 @@ clean:
 run:
 	cd $(OUTPUT) && valgrind --leak-check=full --show-leak-kinds=all ./$(PROJETO) \
 		-e "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src" \
-		-f "00-simples-morango" \
+		-f "00-simples-morango.geo" \
 		-o "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src/logs" \
 		-q "00-simples-morango/colhe-interv-horz.qry" \
 		-ns "8" \
