Alterado Switch Case

--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -41,11 +41,11 @@
                 "-e",
                 "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src",
                 "-f",
-                "01-simples-horta.geo",
+                "03-simples-composto.geo",
                 "-o",
                 "/home/lilo/Faculdade/EstruturadeDados/Fazenda-ED/src/logs",
                 "-q",
-                "01-simples-horta/colhe-interv-horz2.qry",
+                "03-simples-composto/contamina-defensivo-colhe.qry",
                 "-ns",
                 "8",
                 "-fd",
